Fix issue where there was some extra whitespace on the right on mobile view

--- a/frontend/nick-derobertis-site/src/styles.scss
+++ b/frontend/nick-derobertis-site/src/styles.scss
@@ -9,6 +9,7 @@ body {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* CUSTOMIZE THE CAROUSEL
